--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <header>
         <h1>Добро пожаловать в мир DiscordManager!</h1>
     </header>
+
+       <div class="animated-element"></div>
     
     <section class="about-bot">
         <h2>О DiscordManager</h2>
